[package]
name = "project-h01-discord-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.6", features = ["ws"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
poise = "0.6.1"
reqwest = {version = "0.12.24", features=["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
tower-http ={version= "0.6.6", features =["cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
